--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
     "name": "SDMN Checker Bot",
     "description": "A Telegram CC Checker Bot with hella lotta features.",
-    "logo": "https://pbs.twimg.com/profile_images/1252291883793027074/RfEhm8yV_400x400.jpg",
+    "logo": "https://telegra.ph/file/38f51c3ebee318e52ad88.jpg",
     "keywords": [
         "Telegram",
         "Bot",
         "Modular"
     ],
-    "website": "https://telegram.me/SDMN_CheckerBot",
-    "repository": "https://github.com/iam-NVN/SDMN_CheckerBot",
+    "website": "https://decodebugs.netlify.app/",
+    "repository": "https://github.com/AMANTYA1/CC",
     "env": {
         "BOT_TOKEN": {
             "description": "Enter your Bot Token Here. Get it from @Botfather",
