--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "SDMN Checker Bot",
+    "name": "DECODE Checker Bot",
     "description": "A Telegram CC Checker Bot with hella lotta features.",
     "logo": "https://telegra.ph/file/38f51c3ebee318e52ad88.jpg",
     "keywords": [
